--- a/style.css
+++ b/style.css
@@ -1,3 +1,76 @@
 /* // Define different CSS styles for correct, contains, and wrong. */
 
 /* // Define CSS for the grid and other buttons. */
+
+h1 {
+    text-align: center;
+}
+
+.game-grid {
+    display: grid;
+    grid-template-columns: 70px 70px 70px 70px 70px; /*letters*/
+    grid-template-rows: 70px 70px 70px 70px 70px 70px; /*tries*/
+    justify-content: center;
+}
+
+.letter {
+    display: flex;
+    justify-content: center;
+    place-items: center;
+    border: solid 2px;
+    text-align: center;
+    font-size: 30px;
+    margin: 5px;
+}
+
+.key {
+    display: flex;
+    justify-content: center;
+    place-items: center;
+    border: solid 2px;
+    text-align: center;
+    font-size: 25px;
+    margin: 5px;
+}
+
+/* row-start / col-start / row-end / col-end */
+/* .letter-1 {
+    grid-area: 1 / 1 / 2 / 2;
+}
+
+.letter-2 {
+    grid-area: 1 / 2 / 2 / 3;
+}
+
+.letter-3{
+    grid-area: 1 / 3 / 2 / 4;
+}
+
+.letter-4 {
+    grid-area: 1 / 4 / 2 / 5;
+}
+
+.letter-5 {
+    grid-area: 1 / 5 / 2 / 6;
+} */
+
+.top-row {
+    display: grid;
+    margin-top: 5%;
+    grid-template-columns: 55px 55px 55px 55px 55px 55px 55px 55px 55px 55px;
+    grid-template-rows: 55px;
+    justify-content: center;
+}
+
+.middle-row {
+    display: grid;
+    grid-template-columns: 55px 55px 55px 55px 55px 55px 55px 55px 55px;
+    grid-template-rows: 55px;
+    justify-content: center;
+} 
+.bottom-row {
+    display: grid;
+    grid-template-columns: 55px 55px 55px 55px 55px 55px 55px;
+    grid-template-rows: 55px;
+    justify-content: center;
+}
