Added a random word generator and working on colors for if the word is correct.

--- a/style.css
+++ b/style.css
@@ -89,3 +89,15 @@ h1 {
 .delay {
     animation-delay: -2s;
 }
+
+.correct {
+    background-color: green;
+}
+
+.wrong {
+    background-color: gray;
+}
+
+.containsLetter {
+    background-color: yellow;
+}
