Added an animation when the word is not valid.

--- a/style.css
+++ b/style.css
@@ -112,3 +112,26 @@ h1 {
     margin: auto;
     text-align: center;
 }
+
+/* took concept from https://teamtreehouse.com/community/shake-effect-with-javascript-only */
+@keyframes shake {
+    10%, 90% {
+      transform: translate3d(-1px, 0, 0);
+    }
+  
+    20%, 80% {
+      transform: translate3d(2px, 0, 0);
+    }
+  
+    30%, 50%, 70% {
+      transform: translate3d(-5px, 0, 0);
+    }
+  
+    40%, 60% {
+      transform: translate3d(5px, 0, 0);
+    }
+  }
+  
+  .apply-shake {
+      animation: shake 0.3s cubic-bezier(.40,.05,.24,.91) both;
+  }
