Added onscreen keyboard functionality for if the letter is contained in the word.

--- a/style.css
+++ b/style.css
@@ -135,3 +135,20 @@ h1 {
   .apply-shake {
       animation: shake 0.3s cubic-bezier(.40,.05,.24,.91) both;
   }
+
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    right: 0;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
