--- a/style.css
+++ b/style.css
@@ -6,6 +6,46 @@ h1 {
     text-align: center;
 }
 
+.help {
+    display: block;
+    margin: auto;
+    margin-bottom: 20px;
+    border-radius: 100px;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-help {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+
+.dropdown-help a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-help a:hover {
+    background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-help {
+    display: block;
+} 
+
+.dropdown:hover .help {
+    background-color: #3e8e41;
+}
+
 .game-grid {
     display: grid;
     /* grid-template-columns: 70px 70px 70px 70px 70px; letters */
@@ -63,7 +103,7 @@ h1 {
 
 .top-row {
     display: grid;
-    margin-top: 5%;
+    margin-top: 1%;
     grid-template-columns: 55px 55px 55px 55px 55px 55px 55px 55px 55px 55px 55px;
     grid-template-rows: 55px;
     justify-content: center;
@@ -134,21 +174,4 @@ h1 {
   
   .apply-shake {
       animation: shake 0.3s cubic-bezier(.40,.05,.24,.91) both;
-  }
-
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    right: 0;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-
-  .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
   }
