--- a/style.css
+++ b/style.css
@@ -4,46 +4,49 @@
 
 h1 {
     text-align: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .help {
+    background-color:mediumslateblue;
+    color: white;
+    padding: 5px;
+    font-size: 10px;
+    border-radius: 10px;
     display: block;
     margin: auto;
-    margin-bottom: 20px;
-    border-radius: 100px;
-}
-
-.dropdown {
-    position: relative;
-    display: inline-block;
-}
-
-.dropdown-help {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
+    margin-bottom: 1%;
   }
-
-.dropdown-help a {
+  
+  .dropDownMenu {
+    position: relative;
+    display: block;
+    margin: auto;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: relative;
+    background-color: #f1f1f1;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.3);
+    z-index: 1;
+    text-align: center;
+    width: 40%;
+  }
+  
+  .dropdown-content a {
     color: black;
-    padding: 12px 16px;
-    text-decoration: none;
+    padding: 10px 10px;
     display: block;
+  }
+  
+  .dropDownMenu:hover .dropdown-content {
+    display: block;
+    margin: auto;
 }
 
-.dropdown-help a:hover {
-    background-color: #ddd;
-}
-
-.dropdown:hover .dropdown-help {
-    display: block;
-} 
-
-.dropdown:hover .help {
-    background-color: #3e8e41;
+  .dropDownMenu:hover .help {
+    background-color: purple;
 }
 
 .game-grid {
@@ -145,6 +148,10 @@ h1 {
 .reset {
     display: block;
     margin: auto;
+    margin-top: 1%;
+    color: white;
+    background-color: black;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .message {
