--- a/style.css
+++ b/style.css
@@ -10,9 +10,9 @@ h1 {
 .help {
     background-color:mediumslateblue;
     color: white;
-    padding: 5px;
+    padding: 5px 10px 5px 10px;
     font-size: 10px;
-    border-radius: 10px;
+    border-radius: 15px;
     display: block;
     margin: auto;
     margin-bottom: 1%;
@@ -28,10 +28,10 @@ h1 {
     display: none;
     position: relative;
     background-color: #f1f1f1;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.3);
+    box-shadow: 0px 8px 8px rgba(0,0,0,0.3);
     z-index: 1;
     text-align: center;
-    width: 40%;
+    width: 40%
   }
   
   .dropdown-content a {
@@ -51,8 +51,6 @@ h1 {
 
 .game-grid {
     display: grid;
-    /* grid-template-columns: 70px 70px 70px 70px 70px; letters */
-    /* grid-template-rows: 70px 70px 70px 70px 70px 70px; tries */
     grid-template-rows: repeat(6, 70px);
     grid-template-columns: repeat(5, 70px);
     justify-content: center;
@@ -82,27 +80,6 @@ h1 {
     margin: 3px;
     text-decoration: underline;
 }
-
-/* row-start / col-start / row-end / col-end */
-/* .letter-1 {
-    grid-area: 1 / 1 / 2 / 2;
-}
-
-.letter-2 {
-    grid-area: 1 / 2 / 2 / 3;
-}
-
-.letter-3{
-    grid-area: 1 / 3 / 2 / 4;
-}
-
-.letter-4 {
-    grid-area: 1 / 4 / 2 / 5;
-}
-
-.letter-5 {
-    grid-area: 1 / 5 / 2 / 6;
-} */
 
 .top-row {
     display: grid;
@@ -154,10 +131,16 @@ h1 {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
+.reset:active {
+    background-color: gray;
+}
+
 .message {
     display: block;
     margin: auto;
     text-align: center;
+    font-size: 30px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 /* took concept from https://teamtreehouse.com/community/shake-effect-with-javascript-only */
